--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,7 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:20px;
+  padding: 20px;
 }
+.right-align, .left-align{
+  display: flex;
+  gap: 10px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +55,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 8px;
 }
