--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,18 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  gap: 51px;  
+  justify-content: center;
+}
+.items{
+  display: flex;
+  flex-flow: column wrap;
+  max-width: 200px;
+  align-items: center;
 }
 
 img {
@@ -10,6 +23,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
