--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -11,15 +11,45 @@ body {
   color: #333;
   /* I'll give you this one for free lol */
   display: flex;
+  flex: 1 1 auto;
   align-items: center;
   justify-content: center;
 }
 
+.header {
+  font-weight: 700;
+  font-size: large;
+  align-self: center;
+}
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.head {
+  display: flex;
+  gap: 10px;
+}
+
+.data {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.text {
+  max-width: 400px;
+}
+
+.buttons {
+  display: flex;
+  margin-left: 40px;
+  gap: 5px;
 }
 
 .icon {
@@ -43,10 +73,12 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
+  margin-left: auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 
 button {
   padding: 8px 16px;
