--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,50 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* Solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding:0px 20px 0px 20px;
+}
+
+.left-links, .right-links {
+  list-style: none;
+  display: flex;
+  padding: 0px;
+  gap: 10px;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color:rgb(37, 37, 37);
+}
+
+.content {
+  display: flex;
+  margin:auto;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+}
+
+button {
+  padding:10px;
+}
+
+.footer {
+  margin-top:auto;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #eeeeee;
+}
