--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -22,7 +22,70 @@ body {
 }
 
 .card {
-  border: 1px solid #eee;
+  border: 1px solid rgb(172, 169, 169);
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+.header {
+  font-size: 32px;
+  font-weight: 900;
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex:auto;
+}
+
+.sidebar {
+  display: flex;
+  flex: 1 0 300px;
+}
+
+ul{
+  list-style: none;
+  display: flex;
+  flex-flow: column wrap; 
+  flex: 1 1 24px;
+  margin: auto;
+  padding: 16px;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: white;
+}
+
+.cards {
+  display: flex;
+  flex-flow: row wrap;
+  flex:auto;
+  padding: 10px;
+  align-content: space-evenly;
+}
+
+.card {
+  display: flex;
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 10px;
+  max-width: 380px; 
+  height: 300px;
+}
+
+.footer {
+  margin-top: auto;
+
 }
